# JLMG

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindSDL2.cmake
include/: Database.hpp  Defines.hpp
resources/: wordbank.db
src/: Database.cpp  main.cpp
